--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,13 @@
 
 ul, li {margin:0; padding:0; list-style:none;}
 body {
-	background:url("../images/banner1.jpg") no-repeat center 0 #f5f5f5;
+	background:url("../images/blueprint1.jpg")   center 0 #f5f5f5;
+	/*
+	background-image:url("../images/blueprint1.jpg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center center;
+	*/
 	font-family: 'Roboto', sans-serif;
 }
 a { outline:0;
