--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,6 @@
 ul, li {margin:0; padding:0; list-style:none;}
 body {
 	background:url("../images/blueprint1.jpg")   center 0 #f5f5f5;
-	/*
-	background-image:url("../images/blueprint1.jpg");
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: center center;
-	*/
 	font-family: 'Roboto', sans-serif;
 }
 a { outline:0;
@@ -572,7 +566,7 @@ margin: 0 auto;
 .readBtn {
     background-color: transparent;
     border: 2px solid #fff;
-    color: #fff;
+    color: #ffffff;
     text-decoration: none;
     padding: 7px 30px;
     text-align: center;
