--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -1,4 +1,9 @@
+.desc{
+	min-height: 4em;
+	max-height: 4em;
+}
 .photo_item{
+	min-width: 20em;
 	max-width: 20em;
 	border:solid 4px darkblue;
 	display: inline-block;
@@ -7,7 +12,11 @@
 	border:solid 4px green;
 }
 .gallery_img{
+
 	max-width: 100%;
+	min-height: 15em;
+	max-height: 15em;
+
 }
 .photo_gallery{
 	color: black;
