--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,12 +40,22 @@ body {
 	background:url("../images/blueprint1.jpg")   center 0 #f5f5f5;
 	font-family: 'Roboto', sans-serif;
 }
-a { outline:0;
+a { color: white;
+	outline:0;
 	transition:all .5s linear;
 	-webkit-transition:all .5s linear;
 	-moz-transition:all .5s linear;
-	text-decoration:none;
+	text-decoration:underline;
 }
+
+a:visited{ color: white;
+	outline:0;
+	transition:all .5s linear;
+	-webkit-transition:all .5s linear;
+	-moz-transition:all .5s linear;
+	text-decoration:underline;
+}
+
 a:hover, a:focus, a:active {
 	text-decoration:none;
 }
